# kda-miner

./: .gitignore  LICENSE  README.md  cabal.project  kda-miner.cabal  package.yaml  stack.yaml
.github/workflows/: artifact.yaml  haskell-ubuntu.yml  haskell-unix.yml  haskell.yml
exec/: Main.hs  Miner.hs
exec/Miner/: Chainweb.hs  Http.hs  Kernel.hs  OpenCL.hs  Types.hs  Updates.hs
kernels/: kernel.cl
open-cl/Data/: OpenCL.hs
