cabal-version: 2.2

name:          kda-miner
version:       0.1.0
description:   Unofficial mining software for the Kadena Public Blockchain.
homepage:      https://github.com/kadena-io/chainweb-miner
author:        Jacob Barber
maintainer:    Jacoby6000@gmail.com
copyright:     2019 Jacob Barber
license:       GPL-3.0-only
build-type:    Simple

extra-source-files:
  README.md

common commons
  default-language: Haskell2010
  build-depends: 
      base >= 4.12 && < 5
    , ansi-wl-pprint >= 0.6.9
  ghc-options:
    -Wall
    -Wcompat
    -Wpartial-fields
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities
    -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

executable kda-miner
  import: commons
  hs-source-dirs: exec
  main-is: Main.hs 
  other-modules: 
      Miner.Types
    , Miner.Updates
    , Miner.OpenCL
    , Miner.Kernel
    , Miner.Http
    , Miner.Chainweb
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      bytestring >= 0.10
    , Decimal >= 0.4.2
    , aeson >= 1.4.3
    , connection >= 0.2
    , data-default >=0.7
    , dlist >= 0.8
    , semigroupoids >= 5
    , generic-lens >= 1.2
    , http-client >= 0.6
    , http-client-tls >= 0.3
    , http-types >= 0.12
    , mwc-random >= 0.14
    , optparse-applicative >= 0.14
    , pact >= 3.3
    , paths >= 0.2
    , retry >= 0.8
    , rio >= 0.1.12
    , scheduler >= 1.4.2
    , streaming >= 0.2
    , streaming-events >= 1.0
    , strict-tuple >= 0.1.3
    , these >= 1 && < 1.1
    , time >= 1.8
    , wai-extra >= 3.0
    , OpenCL ^>= 1.0.3.4
    , random ^>= 1.1
    , ansi-wl-pprint ^>= 0.6.9
    , text ^>= 1.2.3.1
    , safe-exceptions ^>= 0.1.7.0
    , errors >= 2.3.0
    , split >= 0.2.3
    , async >= 2.2.2
    , streaming-commons >= 0.2.1
    , wreq >= 0.5.3
    , bytes >= 0.15.5
    , binary >= 0.8.6
    , exceptions >= 0.10.3
    , lens >= 4.17
    , cereal >= 0.5.8
